get personal shifts, fix widht display issue

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -31,7 +31,7 @@
         max-width: $page-max-width;
         min-width: $page-min-width;
         height: calc(100% - 16px);
-        padding-top: 16px;
+        padding: 16px 16px 0 16px;
         overflow: hidden;
       }
     }
